--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 <p>GeckoLinux is a Linux distribution based on openSUSE.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="">sb56637</a>.</span>
-
-        <span class="site-footer-credits">Algo">Cayman theme</a> by <a href="http://google.com">Jason Long</a>.</span>
+        <span class="site-footer-owner">.</span>
+        <span class="site-footer-credits">.</span>
       </footer>
 
     </section>
