Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,38 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">GeckoLinux</h1>
-      <h2 class="project-tagline">Linux for OCD Geckos</h2>
+      <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
     </section>
 
     <section class="main-content">
       <h3>
 <a id="welcome-to-geckolinux" class="anchor" href="#welcome-to-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GeckoLinux</h3>
 
-<p>GeckoLinux is a Linux distribution based on openSUSE.</p>
+<p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
 <h4>
-<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h4>
+<a id="motivation-behind-geckolinux" class="anchor" href="#motivation-behind-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation Behind GeckoLinux</h4>
+
+<p>We all know that there's a profusion of Linux distributions and spins out there. So why create another one?</p>
+
+<ol>
+<li>Linux spins based on openSUSE are rarely created and seldom discovered.</li>
+<li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
+<li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
+</ol>
+
+<h4>
+<a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
+
+<ul>
+<li>The latest stable release of the Cinnamon desktop environment with a pleasant default configuration.</li>
+<li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use.</li>
+<li>Beautiful open source font rendering configured out of the box.</li>
+<li>Much more open source and patent encumbered software available in the pre-configured repositories.</li>
+</ul>
+
+<h3>
+<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 
       <footer class="site-footer">
 
