--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
+      <a href="https://github.com/sb56637/geckolinux/zipball/master" class="btn">Download .ISO</a>
     </section>
 
     <section class="main-content">
