--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <ol>
 <li>Linux spins based on openSUSE are rarely created and seldom discovered.</li>
-<li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
+<li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage and lacks overall polish.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
 </ol>
 
