Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="https://github.com/sb56637/geckolinux/zipball/master" class="btn">Download .ISO</a>
     </section>
 
     <section class="main-content">
@@ -29,7 +28,7 @@
 
 <ol>
 <li>Linux spins based on openSUSE are rarely created and seldom discovered.</li>
-<li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage and lacks overall polish.</li>
+<li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
 </ol>
 
@@ -45,6 +44,11 @@
 
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+
+<h3>
+<a id="who-are-you" class="anchor" href="#who-are-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
+
+<p>I've been a user of Linux on the desktop for well over a decade. I have used many versions of openSUSE since its inception, and I used SuSE Linux before that. I've always appreciate openSUSE's flexibility and innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
 
       <footer class="site-footer">
 
