--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p>We all know that there's a profusion of Linux distributions and spins out there. So why create another one?</p>
 
 <ol>
-<li>Linux spins based on openSUSE are rarely created and seldom discovered.</li>
+<li>Spins based on openSUSE are rarely published and seldom discovered.</li>
 <li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
 </ol>
