--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
       <p>
       <a href="https://" class="btn">SuseStudio TestDrive</a>
-      <a href="https://" class="btn">Download .ISO (SuseStudio)</a>
-      <a href="https://" class="btn">Download .ISO (SourceForge)</a>
+      <a href="https://" class="btn">Download .ISO</a>
+      <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
+      <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       </p>
     </section>
 
