--- a/index.html
+++ b/index.html
@@ -21,11 +21,24 @@
       </p>
     </section>
 
-    <section class="main-content">
-      <h3>
-<a id="welcome-to-geckolinux" class="anchor" href="#welcome-to-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GeckoLinux</h3>
+<section class="main-content">
+
+<h3><a id="welcome-to-geckolinux" class="anchor" href="#welcome-to-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GeckoLinux</h3>
 
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
+
+
+<h4>
+<a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
+
+<ul>
+<li>An installable live DVD image based on openSUSE Leap 42.1 under 1GB in size</li>
+<li>The latest stable release of the Cinnamon desktop environment with a pleasant default configuration</li>
+<li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use</li>
+<li>Beautiful open source font rendering configured out of the box</li>
+<li>Much more open source and patent encumbered software available in the pre-configured repositories</li>
+</ul>
+
 
 <h4>
 <a id="motivation-behind-geckolinux" class="anchor" href="#motivation-behind-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation Behind GeckoLinux</h4>
@@ -36,20 +49,16 @@
 <li>Spins based on openSUSE are rarely published and seldom discovered.</li>
 <li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
+<li>There is currently no official installable live media for openSUSE Leap 42.1.</li>
 </ol>
 
-<h4>
-<a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
-<ul>
-<li>The latest stable release of the Cinnamon desktop environment with a pleasant default configuration.</li>
-<li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use.</li>
-<li>Beautiful open source font rendering configured out of the box.</li>
-<li>Much more open source and patent encumbered software available in the pre-configured repositories.</li>
-</ul>
 
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+
+
+
 
 <h3>
 <a id="who-are-you" class="anchor" href="#who-are-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
