--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <h3>
 <a id="who-are-you" class="anchor" href="#who-are-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
-<p>I've been a user of Linux on the desktop for well over a decade. I have used many versions of openSUSE since its inception, and I used SuSE Linux before that. I've always appreciate openSUSE's flexibility and innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
+<p>I've used Linux on the desktop since approximately 2001. I have used many versions of openSUSE since the project's inception, and I used SuSE Linux before that. I've always appreciated openSUSE's flexibility and highly innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
 
       <footer class="site-footer">
 
