--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><title><img src="http://i.imgur.com/kLflZT5.png" alt="Gecko Linux"></title></h1>
       <h1 class="project-name">GeckoLinux</h1>
+      <h2 class="project-tagline"><img src="http://i.imgur.com/kLflZT5.png" alt="Gecko Linux"></h2>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
       <p>
       <a href="https://" class="btn">SuseStudio TestDrive</a>
