--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 
 
 <h4>
+<a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>How Is This Different From openSUSE?</h4>
+
+<ul>
+<li>GeckoLinux comes as an installable live DVD image, whereas openSUSE Leap needs to be installed before using.</li>
+<li>GeckoLinux offers common niceties such as proprietary media codecs, whereas openSUSE requires users to know how to add additional repositories and which ones to add.</li>
+<li>GeckoLinux prefers packages from the Packman repo when they are available, whereas some of openSUSE's default pacakges don't work with patent-restricted features even if the features are installed from other sources./li>
+<li>GeckoLinux comes pre-configured with what many would consider to be good font rendering, whereas many users find openSUSE's default font configuration to be less than desirable.</li>
+<li>GeckoLinux does not force the installation of additional packages after system installation, whereas openSUSE pre-installs patterns that cause many additional packages to be installed the first time the package manager is used.</li>
+<li>GeckoLinux's desktop programs can be uninstalled with all their dependencies, whereas openSUSE's patterns often cause uninstalled packages to be automatically re-installed.</li>
+</ul>
+
+
+<h4>
 <a id="motivation-behind-geckolinux" class="anchor" href="#motivation-behind-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation Behind GeckoLinux</h4>
 
 <p>We all know that there's a profusion of Linux distributions and spins out there. So why create another one?</p>
