--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h2 class="project-tagline"><img src="http://i.imgur.com/kLflZT5.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="https://" class="btn">SuseStudio TestDrive</a>
-      <a href="https://" class="btn">Download .ISO</a>
+      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151113.6" class="btn">SuseStudio TestDrive</a>
+      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/download/iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
     </section>
