--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
       <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151113.6" class="btn">SuseStudio TestDrive</a>
-      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/download/iso" class="btn">Download .ISO</a>
+      <a href="https://susestudio.com/download/c5b4267c0c2f331fbd6429b47aca9198/GeckoLinux_Cinnamon.x86_64-421.151113.6.iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
     </section>
