--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h2 class="project-tagline"><img src="http://i.imgur.com/kLflZT5.png" alt="Gecko Linux"></h2>
+      <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/11155983/03431378-8a17-11e5-8290-f6e90df752d3.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
       <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151113.6" class="btn">SuseStudio TestDrive</a>
@@ -26,6 +26,7 @@
 
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
+<p> <img src="https://cloud.githubusercontent.com/assets/2692138/11155990/0a34e38c-8a17-11e5-974e-a68c5693d8aa.png" alt="Gecko Linux"></p>
 
 <h4>
 <a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
