--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/11155983/03431378-8a17-11e5-8290-f6e90df752d3.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151113.6" class="btn">SuseStudio TestDrive</a>
-      <a href="https://susestudio.com/download/c5b4267c0c2f331fbd6429b47aca9198/GeckoLinux_Cinnamon.x86_64-421.151113.6.iso" class="btn">Download .ISO</a>
+      <a href="https://susestudio.com/build/start_testdrive/1490652/2403344" class="btn">SuseStudio TestDrive</a>
+      <a href="https://susestudio.com/download/90d389d580ecee9a884d3f33f4cfdec5/GeckoLinux_Cinnamon.x86_64-421.151114.2.iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
     </section>
