--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <li>GeckoLinux comes pre-configured with what many would consider to be good font rendering, whereas many users find openSUSE's default font configuration to be less than desirable.</li>
 <li>GeckoLinux does not force the installation of additional recommended packages after system installation, whereas openSUSE pre-installs patterns and automatically installs recommended package dependencies, thus causing many additional and possibly unwanted packages to be installed the first time the package manager is used.</li>
 <li>GeckoLinux's desktop programs can be uninstalled with all their dependencies, whereas openSUSE's patterns often cause uninstalled packages to be automatically re-installed.</li>
+<li>GeckoLinux features a PolicyKit configuration that is more relaxed than openSUSE's, allowing common actions such as mounting/unmounting disks, connecting/disconnecting WiFI networks, and rebooting to be be performed without entering the root password.</li>
 </ul>
 
 
