--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
 <li>There is currently no official installable live media for openSUSE Leap 42.1.</li>
+<li>The Cinnamon desktop environment is not available as an official installation option in openSUSE.</li>
 </ul>
 
 
