--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/11155983/03431378-8a17-11e5-8290-f6e90df752d3.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="https://susestudio.com/build/start_testdrive/1490652/2403344" class="btn">SuseStudio TestDrive</a>
-      <a href="https://susestudio.com/download/90d389d580ecee9a884d3f33f4cfdec5/GeckoLinux_Cinnamon.x86_64-421.151114.2.iso" class="btn">Download .ISO</a>
+      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151116.1" class="btn">SuseStudio TestDrive</a>
+      <a href="https://susestudio.com/download/4251a97297f923d15d40e97059a40512/GeckoLinux_Cinnamon.x86_64-421.151116.1.iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
     </section>
+
+
 
 <section class="main-content">
 
@@ -27,6 +29,14 @@
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
 <p> <img src="https://cloud.githubusercontent.com/assets/2692138/11155990/0a34e38c-8a17-11e5-974e-a68c5693d8aa.png" alt="Gecko Linux"></p>
+
+
+
+<h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
+<ul>
+<li><strong>2015-11-16 : </strong></strong>Version 421.151116.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2015-11-13 : </strong></strong>Version 421.151113.6 (initial release)</li>
+</ul>
 
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
@@ -39,7 +49,7 @@
 </ul>
 
 
-<h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>How Is This Different From openSUSE?</h4>
+<h4><a id="how-different" class="anchor" href="#how-different" aria-hidden="true"><span class="octicon octicon-link"></span></a>How Is This Different From openSUSE?</h4>
 
 <ul>
 <li>GeckoLinux comes as an installable live DVD image, whereas openSUSE Leap needs to be installed before using.</li>
@@ -52,7 +62,7 @@
 </ul>
 
 
-<h4><a id="motivation-behind-geckolinux" class="anchor" href="#motivation-behind-geckolinux" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation Behind GeckoLinux</h4>
+<h4><a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation Behind GeckoLinux</h4>
 
 <p>We all know that there's a profusion of Linux distributions and spins out there. So why create another one?</p>
 
@@ -66,7 +76,7 @@
 
 
 
-<h3><a id="who-are-you" class="anchor" href="#who-are-you" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
+<h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
 <p>I've used Linux on the desktop since approximately 2001. I have used many versions of openSUSE since the project's inception, and I used SuSE Linux before that. I've always appreciated openSUSE's flexibility and highly innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
 
