--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-17 : </strong></strong>Version 421.151117.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-16 : </strong></strong>Version 421.151116.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-13 : </strong></strong>Version 421.151113.6 (initial release)</li>
 </ul>
