--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/11155983/03431378-8a17-11e5-8290-f6e90df752d3.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151117.1" class="btn">SuseStudio TestDrive</a>
-      <a href="https://susestudio.com/download/e0842dd662a218a3c9c408c003c3d417/GeckoLinux_Cinnamon.x86_64-421.151117.1.iso" class="btn">Download .ISO</a>
+      <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151118.1" class="btn">SuseStudio TestDrive</a>
+      <a href="https://susestudio.com/download/0386393da15ef75223fe14f3fe64d7de/GeckoLinux_Cinnamon.x86_64-421.151118.1.iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
     </section>
@@ -34,6 +34,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-17 : </strong></strong>Version 421.151118.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-17 : </strong></strong>Version 421.151117.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-16 : </strong></strong>Version 421.151116.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-13 : </strong></strong>Version 421.151113.6 (initial release)</li>
