--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="https://susestudio.com/download/33efcaee2924452fdcb7a992fa409210/GeckoLinux_Cinnamon.x86_64-421.151120.1.iso" class="btn">Download .ISO</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
+      <a href="https://groups.google.com/forum/#!forum/geckolinux" class="btn">Forum</a>
     </section>
 
 
