--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 </ul>
 
 
+<h4><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
+<a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso" class="btn">Download GeckoLinux Cinnamon</a>
+
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
