--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 </ul>
 
 
-<h4><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
-<a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso" class="btn">Download GeckoLinux Cinnamon</a>
+<h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
+
+<table style="border-color: #ffffff; border-width: 0px; background-color: #ffffff; width: 142px; height: 38px; border-style: solid;" border="0" cellpadding="10" align="center"><tbody><tr><td><img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" height="160" width="160"></td><td style="text-align: center;"><img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png" height="160" width="160"></td><td><img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png" height="160" width="160"></td></tr><tr><td style="text-align: center;"><span style="color: #339966;"><strong>Download GeckoLinux</strong></span><br><span style="color: #339966;"><strong>Cinnamon edition</strong></span></td><td style="text-align: center;"><span style="color: #339966;"><strong>Download GeckoLinux</strong></span><br><span style="color: #339966;"><strong>XFCE edition</strong></span></td><td style="text-align: center;"><span style="color: #339966;"><strong>Download GeckoLinux</strong></span><br><span style="color: #339966;"><strong>Budgie edition</strong></span></td></tr></tbody></table>
 
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
