--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
 </figure>
 <figure>
-    <img src="img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png" alt='XFCE' />
+    <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png" alt='XFCE' />
     <figcaption>Download GeckoLinux XFCE edition</figcaption>
 </figure>
 
