--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
 
+figure {
+    display: inline-block;
+    margin: 0px;
+}
+
 <figure>
     <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
     <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
