--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
 
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
 
+<style>
 figure {
     display: inline-block;
     margin: 0px;
 }
+</style>
 
 <figure>
     <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
