--- a/index.html
+++ b/index.html
@@ -90,15 +90,18 @@ figure {
     width: min-content;
 }
 </style>
-
+<div>
 <figure>
     <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
     <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
 </figure>
+</div>
+<div>
 <figure>
     <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png" alt='XFCE' />
     <figcaption>Download GeckoLinux XFCE edition</figcaption>
 </figure>
+</div>
 
 
 
