--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
 
 <style>
-figure {
-    display: inline-block;
-    margin: 0px;
-    width: min-content;
+figure { 
+  display: table; 
+}
+
+figcaption { 
+  display: table-caption; /* aligns size to the table of the figure
+  caption-side: bottom /* makes the caption appear underneath the image/figure */
 }
 </style>
 <div>
