--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
 
 <style>
 figure { 
-  display: table; 
+  display: table;
+  display: inline; 
 }
 
 figcaption { 
-  display: table-caption; /* aligns size to the table of the figure
-  caption-side: bottom /* makes the caption appear underneath the image/figure */
+  display: table-caption;
+  caption-side: bottom;
 }
 </style>
 <div>
