--- a/index.html
+++ b/index.html
@@ -84,28 +84,26 @@
 <h3><a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h4>
 
 <style>
-figure { 
-  display: table;
-  float: horizontal;
-}
-
-figcaption { 
-  display: table-caption;
-  caption-side: bottom;
+@media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
 }
 </style>
-<div>
-<figure>
+
+<div class="row">
+    <div class="col">
+      <figure>
     <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
     <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
 </figure>
-</div>
-<div>
-<figure>
-    <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png" alt='XFCE' />
-    <figcaption>Download GeckoLinux XFCE edition</figcaption>
+      </div>
+    <div class="col">
+      <figure>
+    <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
+    <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
 </figure>
+      </div>
 </div>
+
+
 
 
 
