--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
 }
+figure { 
+  display: table;
+}
+
+figcaption { 
+  display: table-caption;
+  caption-side: bottom;
 </style>
 
 <div class="row">
