--- a/index.html
+++ b/index.html
@@ -85,29 +85,29 @@
 
 <style>
 @media(min-width:30em){.row{width:100%;display:table;table-layout:fixed}.col{display:table-cell}}
-}
 figure { 
   display: table;
 }
-
 figcaption { 
   display: table-caption;
   caption-side: bottom;
+  font-size: 70%;
+  font-weight: bold;
 </style>
 
 <div class="row">
     <div class="col">
       <figure>
-    <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
-    <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
-</figure>
-      </div>
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
+        <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
+      </figure>
+    </div>
     <div class="col">
       <figure>
-    <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
-    <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
-</figure>
-      </div>
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
+        <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
+      </figure>
+    </div>
 </div>
 
 
