--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
+        <a href="http://google.com">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
       </figure>
     </div>
