--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
       <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151123.1" class="btn">SuseStudio TestDrive</a>
-      <a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso" class="btn">Download .ISO</a>
+      <a href="http://geckolinux.github.io/#download" class="btn">Download</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       <a href="https://groups.google.com/d/forum/geckolinux" class="btn">Forum</a>
@@ -98,15 +98,16 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="http://google.com">
+        <a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg" alt='Cinnamon' />
-        <figcaption>Download GeckoLinux Cinnamon edition</figcaption>
+        <a href="https://susestudio.com/download/ab8977fba8d2975b7ce0b24d9b8579ef/GeckoLinux_XFCE.x86_64-421.151124.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
+        <figcaption>Download GeckoLinux XFCE edition</figcaption>
       </figure>
     </div>
 </div>
