--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     </figure>
 </div>
 
+<script>
+  makeBSS('.simple-slideshow-styles');
+</script>
+
 
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
