--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     
-    <script src="better-simple-slideshow.min.js"></script>
+    <script src="better-simple-slideshow.js"></script>
     <link rel="stylesheet" href="stylesheets/simple-slideshow-styles.css" type="text/css" media="all">
     
   </head>
