--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
-<div class="slideshow-class-goes-here">
+<div class="bss-slides num1" tabindex="1" autofocus="autofocus">
     <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11155990/0a34e38c-8a17-11e5-974e-a68c5693d8aa.png" width="100%" />
         <figcaption>Caption goes here</figcaption> 
