--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 <div class="bss-slides num1" tabindex="1" autofocus="autofocus">
     <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11155990/0a34e38c-8a17-11e5-974e-a68c5693d8aa.png" width="100%" />
-        <figcaption>Caption goes here</figcaption> 
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" width="100%" />
+        <figcaption>GeckoLinux Cinnamon edition</figcaption> 
     </figure>
 
      <figure>
-        <img src="http://www.heise.de/ct/zcontent/14/18-hocmsmeta/1408645204837566/contentimages/budgie-desktop.5.1_ast_SC.jpg" width="100%" />
-        <figcaption>Caption goes here</figcaption> 
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png" width="100%" />
+        <figcaption>GeckoLinux XFCE edition</figcaption> 
     </figure>
 </div>
 
