--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
-<div class="bss-slides">
+<div class="aaa">
     <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" width="100%" />
         <figcaption>GeckoLinux Cinnamon edition</figcaption> 
@@ -45,7 +45,7 @@
     </figure>
     
     <script>
-      makeBSS('bss-slides');
+      makeBSS('.aaa');
     </script>
 </div>
 
