--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
 <div class="bss-slides num1">
-    <figure>
+    <figure class="bss-show">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" width="100%" />
         <figcaption>GeckoLinux Cinnamon edition</figcaption> 
     </figure>
 
-     <figure>
+    <figure class="bss-show">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png" width="100%" />
         <figcaption>GeckoLinux XFCE edition</figcaption> 
     </figure>
