--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     
-<link rel="stylesheet" href="slideshow.css">
-<script src="slideshow.js"></script>
+    <link rel="stylesheet" href="slideshow.css">
+    <script src="slideshow.js"></script>
     
   </head>
   
@@ -38,12 +38,15 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png" title="GeckoLinux XFCE edition" alt="GeckoLinux XFCE edition"></a></li>
 </ul>
 
-        <script src="slideshow.js"></script>
-        <script>
-            window.addEventListener('load', function () {
-                var slsh = new SlideShow('.slideshow', {timeout: 5000});
-            });
-        </script>
+<style>
+    .slideshow {
+        width: 1024px;
+        height: 768px;
+    }
+</style>
+
+<script src="slideshow.js"></script>
+
 
 
 
