--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <p>GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop.</p>
 
 <ul class="slideshow">
-    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="" width="100%"></a></li>
-    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png" title="GeckoLinux XFCE edition" alt="" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381660/49d21c8c-92cb-11e5-906f-1f5c774e92ed.png" title="GeckoLinux XFCE edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
 
 <style>
