--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@ figcaption {
         <figcaption>Download GeckoLinux XFCE edition</figcaption>
       </figure>
     </div>
+    <div class="col">
+      <figure>
+        <a href="https://susestudio.com/download/bc32782c3b761de4aa2e8efbd02b75cb/GeckoLinux_Budgie.x86_64-421.151124.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
+        <figcaption>Download GeckoLinux XFCE edition</figcaption>
+      </figure>
+    </div>
+    
+    https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png
 </div>
 
 
