--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-24 : </strong></strong>Budgie Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
+<li><strong>2015-11-24 : </strong></strong>XFCE Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-23 : </strong></strong>Version 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-20 : </strong></strong>Version 421.151120.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-19 : </strong></strong>Version 421.151119.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
