--- a/index.html
+++ b/index.html
@@ -56,20 +56,15 @@
 <ul>
 <li><strong>2015-11-24 : </strong></strong>Budgie Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-24 : </strong></strong>XFCE Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
-<li><strong>2015-11-23 : </strong></strong>Version 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-20 : </strong></strong>Version 421.151120.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-19 : </strong></strong>Version 421.151119.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-18 : </strong></strong>Version 421.151118.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-17 : </strong></strong>Version 421.151117.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-16 : </strong></strong>Version 421.151116.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-13 : </strong></strong>Version 421.151113.6 (initial release)</li>
+<li><strong>2015-11-23 : </strong></strong>Cinnamon Version 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2015-11-13 : </strong></strong>Cinnamon Version 421.151113.6 (initial release)</li>
 </ul>
 
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
 <ul>
 <li>An installable live DVD image based on openSUSE Leap 42.1 under 1GB in size</li>
-<li>The latest stable release of the Cinnamon desktop environment with a pleasant default configuration</li>
+<li>Individual editions for different popular desktop environments with a pleasant default configuration</li>
 <li>Carefully selected open source desktop programs and proprietary media codecs pre-installed and ready to use</li>
 <li>Beautiful open source font rendering configured out of the box</li>
 <li>Much more open source and patent encumbered software available in the pre-configured repositories</li>
@@ -80,7 +75,9 @@
 
 <ul>
 <li>GeckoLinux comes as an installable live DVD image, whereas openSUSE Leap needs to be installed before using.</li>
-<li>GeckoLinux offers common niceties such as proprietary media codecs, whereas openSUSE requires users to know how to add additional repositories and which ones to add.</li>
+<li>GeckoLinux offers customized editions optimized for different desktop environments, whereas openSUSE requires the user to know how to install patterns and packages for different desktop environments.</li>
+<li>GeckoLinux offers editions with desktop environments that are not available in the official openSUSE repos, such as Cinnamon and Budgie.</li>
+<li>GeckoLinux comes pre-installed with common niceties such as proprietary media codecs, whereas openSUSE requires users to know how to add additional repositories and which ones to add.</li>
 <li>GeckoLinux prefers packages from the Packman repo when they are available, whereas some of openSUSE's default packages don't work with patent-restricted features even if the features are installed from other sources.</li>
 <li>GeckoLinux comes pre-configured with what many would consider to be good font rendering, whereas many users find openSUSE's default font configuration to be less than desirable.</li>
 <li>GeckoLinux does not force the installation of additional recommended packages after system installation, whereas openSUSE pre-installs patterns and automatically installs recommended package dependencies, thus causing many additional and possibly unwanted packages to be installed the first time the package manager is used.</li>
@@ -94,11 +91,11 @@
 <p>We all know that there's a profusion of Linux distributions and spins out there. So why create another one?</p>
 
 <ul>
-<li>Spins based on openSUSE are rarely published and seldom discovered.</li>
+<li>Spins based on openSUSE are seldom discovered.</li>
 <li>openSUSE is a fundamentally excellent Linux distribution, but it suffers from a suboptimal default configuration for desktop usage.</li>
 <li>The <a href="http://susestudio.com">Suse Studio</a> makes it relatively easy to create custom spins of openSUSE.</li>
 <li>There is currently no official installable live media for openSUSE Leap 42.1.</li>
-<li>The Cinnamon desktop environment is not available as an official installation option in openSUSE.</li>
+<li>The Cinnamon and Budgie desktop environments are not available as an official installation option in openSUSE.</li>
 </ul>
 
 
