--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-<li><strong>2015-11-24 : </strong></strong>Budgie Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
-<li><strong>2015-11-24 : </strong></strong>XFCE Version 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
-<li><strong>2015-11-23 : </strong></strong>Cinnamon Version 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-13 : </strong></strong>Cinnamon Version 421.151113.6 (initial release)</li>
+<li><strong>2015-11-24 : </strong></strong>Budgie edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
+<li><strong>2015-11-24 : </strong></strong>XFCE edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
+<li><strong>2015-11-23 : </strong></strong>Cinnamon edition 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2015-11-13 : </strong></strong>Cinnamon edition 421.151113.6 (initial release)</li>
 </ul>
 
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
