--- a/index.html
+++ b/index.html
@@ -118,21 +118,27 @@ figcaption {
       <figure>
         <a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
-        <figcaption>Download GeckoLinux Cinnamon edition </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151123.1">(SuseStudio TestDrive)</a></figcaption>
+        <figcaption>Download GeckoLinux Cinnamon edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151123.1">(SuseStudio TestDrive)</a>
+        </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
         <a href="https://susestudio.com/download/ab8977fba8d2975b7ce0b24d9b8579ef/GeckoLinux_XFCE.x86_64-421.151124.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
-        <figcaption>Download GeckoLinux XFCE edition</figcaption>
+        <figcaption>Download GeckoLinux XFCE edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151124.0">(SuseStudio TestDrive)</a>
+        </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
         <a href="https://susestudio.com/download/bc32782c3b761de4aa2e8efbd02b75cb/GeckoLinux_Budgie.x86_64-421.151124.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
-        <figcaption>Download GeckoLinux Budgie edition</figcaption>
+        <figcaption>Download GeckoLinux Budgie edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151124.0">(SuseStudio TestDrive)</a>
+        </figcaption>
       </figure>
     </div>
 </div>
