--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/11155983/03431378-8a17-11e5-8290-f6e90df752d3.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="http://geckolinux.github.io/#download" class="btn">SuseStudio TestDrive / Download</a>
+      <a href="http://geckolinux.github.io/#download" class="btn">Download / SuseStudio TestDrive</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       <a href="https://groups.google.com/d/forum/geckolinux" class="btn">Forum</a>
