--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-25 : </strong></strong>XFCE edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
+<li><strong>2015-11-25 : </strong></strong>Budgie edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-24 : </strong></strong>Budgie edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-24 : </strong></strong>XFCE edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-23 : </strong></strong>Cinnamon edition 421.151123.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
@@ -124,19 +126,19 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/ab8977fba8d2975b7ce0b24d9b8579ef/GeckoLinux_XFCE.x86_64-421.151124.0.iso">
+        <a href="https://susestudio.com/download/f3f2d395de926b897de70f3126e57659/GeckoLinux_XFCE.x86_64-421.151125.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151124.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151125.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/bc32782c3b761de4aa2e8efbd02b75cb/GeckoLinux_Budgie.x86_64-421.151124.0.iso">
+        <a href="https://susestudio.com/download/9b58f6b04305ad8de0d3424ef5f6d09e/GeckoLinux_Budgie.x86_64-421.151125.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151124.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151125.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
