--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-25 : </strong></strong>BareBones edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">(initial release information)</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>XFCE edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>Budgie edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-24 : </strong></strong>Budgie edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
@@ -144,10 +145,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://">
-        <img src="      https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
-        <figcaption>Download GeckoLinux barebones edition
-                </br> <a href="https://">(SuseStudio TestDrive)</a>
+        <a href="https://susestudio.com/download/0d83abe853735e99d7c3cdccfb1295d2/GeckoLinux_BareBones.x86_64-421.151125.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
+        <figcaption>Download GeckoLinux BareBones edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151125.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
