--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-<li><strong>2015-11-25 : </strong></strong>BareBones edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">(initial release information)</a>)</li>
+<li><strong>2015-11-25 : </strong></strong>BareBones edition 421.151125.0 <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">(initial release information)</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>XFCE edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>Budgie edition 421.151125.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-24 : </strong></strong>Budgie edition 421.151124.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
