--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-26 : </strong></strong>Budgie edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>XFCE edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>XFCE edition 421.151125.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>Budgie edition 421.151125.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
@@ -140,10 +141,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/822d374c3b2d5e738c8cc732b13b2492/GeckoLinux_Budgie.x86_64-421.151125.1.iso">
+        <a href="https://susestudio.com/download/31befc4995c51f826a589b3e414137f9/GeckoLinux_Budgie.x86_64-421.151126.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151125.1">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151126.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
