--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-27 : </strong></strong>XFCE edition 421.151127.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>Budgie edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>XFCE edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-25 : </strong></strong>XFCE edition 421.151125.1 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
@@ -132,10 +133,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/db94e916dcf39a4dd654e70fb796b3e6/GeckoLinux_XFCE.x86_64-421.151126.0.iso">
+        <a href="https://susestudio.com/download/50f658edb41dee13897b9409d11cd570/GeckoLinux_XFCE.x86_64-421.151127.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151126.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151127.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
